# TPTEST-COO

./: CMakeLists.txt  README.md
include/: mylib.h
src/: CMakeLists.txt  mylib.cpp  test.cpp  test.h
src2/: CMakeLists.txt
test/: CMakeLists.txt  gtest.cpp
